[package]
name = "lams-patch"
version = "0.1.0"
edition = "2018"
build = "build.rs"
authors = ["郑瑞召 <ruizhaozheng@aliyun.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/konanzheng/lams-patch"
repository = "https://github.com/konanzheng/lams-patch"
documentation = "README.md"
description = "a big text file split util"
[build-dependencies]
winres = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"




[package.metadata.winres]
OriginalFilename = "lams-patch.exe"
LegalCopyright = "Copyright © 2022-2023 zhengruizhao"
