[package]
name = "lams-patch"
version = "0.1.0"
edition = "2018"
authors = ["郑瑞召 <ruizhaozheng@aliyun.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/konanzheng/lams-patch"
repository = "https://github.com/konanzheng/lams-patch"
documentation = "https://github.com/konanzheng/lams-patch"
description = "make patch for maven project "

 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
